[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/scene/gui/gui_keyslaying.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/sprite/background/peacetown.png" type="Texture" id=2]
[ext_resource path="res://source/sprite/ui/treble_clef.png" type="Texture" id=3]
[ext_resource path="res://source/sprite/ui/line.png" type="Texture" id=4]
[ext_resource path="res://source/sprite/ui/gradient.png" type="Texture" id=5]
[ext_resource path="res://source/script/minigame/mg_keyslaying.gd" type="Script" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, 1.5);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Keyslaying" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Node2D" parent="."]
position = Vector2( 88, 535 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( -176, -1070 )
scale = Vector2( 6.4, 5.855 )
texture = ExtResource( 2 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Background"]
material = SubResource( 2 )
margin_left = -176.0
margin_top = -1070.0
margin_right = 1104.0
margin_bottom = -350.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gradient" type="Sprite" parent="Background"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1099.26, -140.818 )
scale = Vector2( 4, 1 )
texture = ExtResource( 5 )

[node name="KeyslayingGUI" parent="." instance=ExtResource( 1 )]
margin_left = 43.5529
margin_top = 531.825
margin_right = 2883.55
margin_bottom = 819.825
rect_scale = Vector2( 0.42, 0.42 )

[node name="Pentagram" type="Node2D" parent="."]

[node name="ClefShade" type="Sprite" parent="Pentagram"]
position = Vector2( 118, 266.355 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 3 )

[node name="Clef" type="Sprite" parent="Pentagram"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 109.457, 266.355 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 3 )

[node name="LineE" type="Sprite" parent="Pentagram"]
position = Vector2( 731.174, 385 )
scale = Vector2( 3.6, 1 )
texture = ExtResource( 4 )

[node name="LineG" type="Sprite" parent="Pentagram"]
position = Vector2( 731.174, 325 )
scale = Vector2( 3.6, 1 )
texture = ExtResource( 4 )

[node name="LineB" type="Sprite" parent="Pentagram"]
position = Vector2( 731.174, 265 )
scale = Vector2( 3.6, 1 )
texture = ExtResource( 4 )

[node name="LineD" type="Sprite" parent="Pentagram"]
position = Vector2( 731.174, 205 )
scale = Vector2( 3.6, 1 )
texture = ExtResource( 4 )

[node name="LineF" type="Sprite" parent="Pentagram"]
position = Vector2( 731.174, 145 )
scale = Vector2( 3.6, 1 )
texture = ExtResource( 4 )
